# SMARSController

./: .gitignore
AlarmAPI/: .dockerignore  AlarmAPI.go  Dockerfile  app.js  build_and_push_image.sh  package-lock.json  package.json
AlarmAPI/authorization/: code.js  code_test.js  header.js
AlarmAPI/db/: db.js  db_test.js
AlarmAPI/entity/: Alarm.js  ApiKey.js
AlarmAPI/routes/: alarm.js
AuthServer/: .dockerignore  AuthServer.go  Dockerfile  auth_server.go  build_and_push_image.sh  credentials.go  db.go  go.mod  go.sum  token.go
AuthServer/api/: auth_api.go  authorize.go  health.go  redirect.go
AuthServer/auth_json/: json.go
AuthServer/credentials/: credentials_provider.go  google_env_provider.go  google_env_provider_test.go  google_file_provider.go  google_file_provider_test.go  token.go
AuthServer/db/: db.go
AuthServer/deployment/: auth-server.yaml
CoffeeApp/: build.gradle  settings.gradle
CoffeeApp/app/: build.gradle
CoffeeApp/common/: build.gradle
CoffeeApp/watch/: build.gradle
CoffeeOperator/: PROJECT  go.mod  main.go
CoffeeOperator/authserver/: deployment.go  reconciler.go  secret.go
CoffeeOperator/controllers/: authserver_controller.go  (+2 more)
ControlAPI/: build.gradle  settings.gradle
ControlUI/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
RaspberryClient/: Cargo.toml
RaspberryClient/src/: main.rs
RaspberryPyClient/: App.py  TestApp.py  messaging.py  mqtt.py  raspi.py
SMARSController/: settings.gradle
alarm-ui/: .eslintrc.js  README.md  package-lock.json  package.json
db/: db.go  go.mod  go.sum
(+119 files in other folders)
