[package]
name = "raspberry_client"
version = "0.1.0"
authors = ["Michael Rynkiewicz <michaelrynkiewicz3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio="0.4.1"
reqwest= {version = "0.10.8", features = ["blocking", "json"] }
paho-mqtt="0.7.1"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"